User 그룹&&역할 필터 조회 API 추가
