# routes/user.js
@@ -186,7 +186,6 @@ router.put('/api/users/:id', auth, async (req, res) => {
   const { role, group } = req.body;
 
   try {
-    console.log(req.params.id);
     const user = await User.findById(req.params.id);
     if (!user) {
       return res.status(404).send({ error: "회원을 찾을 수 없습니다." });
@@ -235,6 +234,56 @@ router.get('/api/groups', async (req, res) => {
     res.status(200).send({groups, message: "그룹 목록 조회가 성공하였습니다."});
   } catch (error) {
     res.status(500).send({ error: '그룹 목록 조회 중 오류가 발생했습니다.' });
+  }
+});
+
+router.get('/api/users/group/:groupId/role/:roleId/info', async (req, res) => {
+  // #swagger.tags = ['Users']
+  // #swagger.summary = 'User 그룹&&역할 필터 조회'
+  /* #swagger.parameters['groupId'] = {
+        in: 'path',
+        required: true,
+        description: '조회할 그룹의 ID',
+        schema: { type: 'string' },
+        example: '66a0b1bd8d7e45a08668b300'
+  } */
+
+  /* #swagger.parameters['roleId'] = {
+        in: 'path',
+        required: true,
+        description: '조회할 역할의 ID',
+        schema: { type: 'string' },
+        example: '66a0bbfe8d7e45a08668b30f'
+  } */
+  try {
+    const { groupId, roleId } = req.params; // 파라미터로 groupId와 roleId 받기
+
+    // 해당 그룹과 역할을 가진 모든 사용자 조회
+    const leaders = await User.find({
+      group: groupId,
+      role: roleId, // 역할 ID로 필터링
+    })
+      .populate('role') // 역할 정보 포함
+      .populate('group'); // 그룹 정보 포함
+
+    if (!leaders || leaders.length === 0) {
+      return res.status(404).json({ message: '그룹과 역할에 맞는 user 정보가 없습니다.' });
+    }
+
+    // 리더들의 정보를 배열로 가공하여 응답
+    const leadersInfo = leaders.map((leader) => ({
+      _id: leader._id,
+      email: leader.email,
+      name: leader.name,
+      role: leader.role._id, // 역할 ID만 포함
+      group: leader.group._id, // 그룹 ID만 포함
+      signupDate: leader.signupDate,
+    }));
+
+    // 리더들 정보 배열 응답 반환
+    res.status(200).json({ leaders: leadersInfo });
+  } catch (error) {
+    res.status(500).json({ message: 'user 그룹, 역할 필터 조회 중 오류가 발생했습니다.' });
   }
 });
 module.exports = router;
